--- a/app-code/com.barnsatble.fit/platforms/ios/Barnstable Academy Fitness Tracker/Barnstable Academy Fitness Tracker-Info.plist
+++ b/app-code/com.barnsatble.fit/platforms/ios/Barnstable Academy Fitness Tracker/Barnstable Academy Fitness Tracker-Info.plist
@@ -33,14 +33,14 @@
 	<string>need camera access to take pictures</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>need location access to find things nearby</string>
-	<key>NSMainNibFile</key>
-	<string></string>
 	<key>NSMainNibFile~ipad</key>
 	<string></string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
 	<string>need photo library access to save pictures there</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>Photo library is used to get a verification image</string>
+	<key>UILaunchStoryboardName</key>
+	<string>Launch Screen</string>
 	<key>UIRequiresFullScreen</key>
 	<true/>
 	<key>UISupportedInterfaceOrientations</key>
